2002-05-06  Per Bothner  <per@bothner.com>

	* Compare.java:  Implement CanInline.

	* Focus.java.in:  Move to gnu.kawa.xml.
	* Makefile.am:  Update accordingly.
	* Position.java:  Now need to import Focus.
	* ValuesFilter.java:  Likewise.

2002-04-19  Per Bothner  <per@bothner.com>

	* Average.java:  New class, extends Procedure1.
	* Reduce.java:  New class, extends Procedure1.
	* Makefile.am (java_sources):  Update accordingly.
	* MinMax.java:  Change to inherit from Reduce.

2002-04-18  Per Bothner  <per@bothner.com>

	* BooleanValue.java:  New class, extends Procedure1.
	* Makefile.am (java_sources):  Add BooleanValue.java.

2002-04-08  Per Bothner  <per@bothner.com>

	* Children.java (children):  Use nextNodeIndex.

2002-03-16  Per Bothner  <per@bothner.com>

	* Makefile.am (java_sources):  Remove mistakenly added MapDescendents.

2002-03-07  Per Bothner  <per@bothner.com>

	* MinMax.java:  New class, extends Procedure1.
	* Position.java:  New class, extends Procedure0.
	* Makefile.am:  Update accordingly.
	* Focus.java.in (compileGetCurrent):  New static helper method.

	* Focus.java.in (position):  Change type from int to long.
	* ValuesFilter.java (apply):  Update current Focus's position field.

2002-03-02  Per Bothner  <per@bothner.com>

	* Focus.java.in:  New sed-processed class, extends SeqPosition.
	* Makefile.am:  Update accordingly.

2002-02-13  Per Bothner  <per@bothner.com>

	* MakeAttribute.java (apply):  Do getNextArg inside loop.

2002-02-05  Per Bothner  <per@bothner.com>

	* ElementType.java:  Moved to gnu.kawa.xml.
	* NamedChildren.java:  Moved to gnu.kawa.xml.
	* NodeType.java:  Moved to gnu.kawa.xml.
	* Makefile.am:  Update accordingly.

2002-01-23  Per Bothner  <per@bothner.com>

	* AppendValues.java:  Removed - moved to gnu.kawa.functions.
	* Makefile.am:  Update accordingly.

2002-01-21  Per Bothner  <per@bothner.com>

	* Document.java:  Moved to gnu.kawa.xml.

	* Document.java (document):  New static methods.