@@ -1,3 +1,12 @@
+2002-07-02  Per Bothner  <per@bothner.com>
+
+	* Compare.java (apply):  Mistaken assumption - String.compareTo does
+	not necessarily return -1, 0, or 1.
+
+	* IndexOf.java:  New class, extends Procedure2.
+	* LastIndexOf.java:  New class, extends Procedure2.
+	* Makefile.am (java_sources):  add new files.
+
 2002-05-06  Per Bothner  <per@bothner.com>
 
 	* Compare.java:  Implement CanInline.
